--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "eslint-config-airbnb-base": "^15.0.0",
     "express": "^4.18.2",
     "mongoose": "^6.10.0"
   },
   "devDependencies": {
     "eslint": "^8.35.0",
-    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^19.0.4",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
