--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,9 @@
 {
   "env": {
-    "browser": true,
     "es2021": true
   },
   "extends": [
     "eslint:recommended",
-    "plugin:react/recommended",
     "airbnb-base"
   ],
   "overrides": [],
@@ -13,16 +11,7 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": [
-    "react"
-  ],
-  "settings": {
-    "react": {
-      "version": "18.2.0"
-    }
-  },
   "rules": {
-    "indent": "off",
-    "no-underscore-dangle": "off"
+    "no-underscore-dangle": ["error", { "allow": ["_id"]}]
   }
 }
