--- a/package.json
+++ b/package.json
@@ -2,23 +2,22 @@
   "name": "y",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "lint": "eslint",
+    "lint": "eslint ./",
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
-  "author": "",
+  "author": "Dmitriy Domrachev",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
-    "eslint-config-airbnb-base": "^15.0.0",
     "express": "^4.18.2",
     "mongoose": "^6.10.0"
   },
   "devDependencies": {
     "eslint": "^8.35.0",
-    "eslint-config-airbnb-base": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
