--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "http-status-code": "^2.1.0",
+    "http-status-codez": "^1.2.2",
     "mongoose": "^6.10.0"
   },
   "devDependencies": {
