--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "author": "Dmitriy Domrachev",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "mongoose": "^6.10.0"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.10.0",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "eslint": "^8.35.0",
